tests/golden/type_errors/imported_file_type_error.cd
import "./imported_file_type_error_deps/lib.cd";
print value;
